src/devtools/panel/tanaguru-devtools-panel.css
/* ... */
/*
main:not(.launch-analysis) > div:first-child::after {
	background-color: #e5e5e5;
	content: '';
	position: absolute;
	top: 0;
	bottom: 0;
	right: 0;
	width: 1px; background-color: red;
}
*/

main > div:first-child h1 {
	color: #2b7b92;
	font-size: 0.95em;
	font-weight: bolder;
	margin: 0;
	padding: 0.5em;
}

div.navigation ul {
	background-color: rgba(255, 255, 255, 0.925);
	list-style-type: none;
	margin: 0;
	padding: 0;
}

div.navigation li:first-child {
	margin-bottom: 1em;
}

div.navigation li:first-child + li {
	border-bottom: solid 1px #e5e5e5;
	border-top: solid 1px #e5e5e5;
}

div.navigation li:not(.ressource) + li.ressource {
	border-top: solid 1px #e5e5e5;
}
	
div.navigation li {
	box-sizing: border-box;
	color: #666;
	cursor: default;
	display: inline-block;
	font-size: 0.75em;
	position: relative;
	padding: 0.25em 0.5em;
	padding-right: 3px;
	width: 100%;
}

div.navigation li:hover {
	background-color: #f5f5f5;
}

div.navigation li * {
	pointer-events: none;
}

div.navigation li[aria-selected="true"] {
	background-color: #F2F9FB;
	color: #2b7b92;
}
	
div.navigation li[aria-selected="true"]::before {
	background-color: #2b7b92;
	content: '';
	position: absolute;
	top: 0;
	bottom: 0;
	right: -1px;
	width: 4px;
	z-index: 1;
}
	
div.navigation li span {
	float: left;
}

div.navigation li strong {
	background-color: #d90b0b;
	background: linear-gradient(top, #ef362c, #d90b0b);
	border-radius: 50%;
	color: white;
	display: inline-block;
	float: right;
	font-size: 0.8em;
	margin-right: 0.5em;
	padding: 0 1em;
}
	
main:not(.launch-analysis) > div:first-child + div {
	margin: 0;
}

main:not(.launch-analysis) > div:first-child + div h2 {
	color: #2b7b92;
	font-size: 1em;
	font-weight: bolder;
	margin: 0;
	padding: 0.5em;
}

[role="tabpanel"] {
	margin-bottom: 1.25em;
}

[role="tabpanel"][aria-hidden="true"] {
	display: none;
}

[role="tabpanel"] > p {
	padding-left: 0.5em;
	padding-right: 0.5em;
}

[role="tabpanel"] table {
	width: 100%;
}

[role="tabpanel"] h3 strong {
	border-radius: 50%;
	display: inline-block;
	margin-right: 0.25em;
	padding-left: 0.5em;
	padding-right: 0.5em;
}
		
[role="tabpanel"] h3 {
	margin: 0;
}

[role="tabpanel"] > div {
	margin-left: 0.65em;
	margin-right: 0.65em;
}

[role="tabpanel"] div {
	margin-bottom: 1.25em;
}
	
[role="tabpanel"] h3 {
	font-size: 0.85em;
	font-weight: normal;
}

[role="tabpanel"] h3 button {
	box-sizing: border-box;
	-moz-user-select: none;
	background: none;
    border: none;
    border-bottom: solid 1px #e5e5e5;
    font: inherit;
    line-height: normal;
    overflow: visible;
    color: #4c4c4c;
	display: block;
	font-size: 1em;
	padding: 0 0.75em 0 2.75em;
	position: relative;
	text-align: left;
	width: 100%;
}
		
[role="tabpanel"] h3 button::-moz-focus-inner {
    border: 0;
    padding: 0;
}

[role="tabpanel"] h3 button:focus {
	outline: dotted 1px gray;
}

[role="tabpanel"] h3 button[aria-expanded="true"] {
	border-bottom-color: #fff;
}

[role="tabpanel"] h3 button::before {
	content: '';
	position: absolute;
	top: 50%;
	left: 0;
	margin-top: -15px;
	width: 30px;
	height: 30px;
	border-radius: 50%;
	background-color: #fff;
	-webkit-transition: background-color .3s ease-in-out;
	transition: background-color .3s ease-in-out;
}

[role="tabpanel"] h3 button::after {
	top: 50%; margin-top: -0.6em;
	left: 0.025em;
	width: 30px;
	text-align: center;
	font: normal normal normal 1.8rem/1.15 FontAwesome;
	content: "\f105";
	position: absolute;
	-webkit-transition: color .3s ease-in-out;
	transition: color .3s ease-in-out;
}

[role="tabpanel"] h3 button[aria-expanded="true"]::before {
	background-color: #4B4C4B;
}

[role="tabpanel"] h3 button * {
	padding-bottom: 0.75em;
	padding-top: 0.75em;
}

[role="tabpanel"] h3 button strong {
	display: inline-block;
	min-width: 60px;
	text-align: right;
}

[role="tabpanel"] h3 button span + span {
	display: inline-block;
	padding-left: 1.6em;
	text-indent: 60px;
}

[role="tabpanel"] h3 .status {
	display: inline-block;
	margin-right: 1em;
	min-width: 180px;
	padding-left: 1em;
	padding-right: 1em;
	text-align: center;
}

[role="tabpanel"] h3.failed button::after {
	color: #d90b0b;
}

[role="tabpanel"] h3.failed .status {
	background-color: rgba(217, 11, 11, 0.1);
	color: #d90b0b;
}

[role="tabpanel"] h3.failed button[aria-expanded="true"]::before {
	background-color: #d90b0b;
}

[role="tabpanel"] h3.failed strong {
	color: #d90b0b;
}

[role="tabpanel"] h3.failed + div mark {
	background: -moz-linear-gradient(top, #ef362c, #d90b0b);
	color: #fff;
}

[role="tabpanel"] h3.passed button::after {
	color: #358700;
}

[role="tabpanel"] h3.passed .status {
	background-color: rgba(53, 135, 0, 0.1);
	color: #358700;
}

[role="tabpanel"] h3.passed button[aria-expanded="true"]::before {
	background-color: #358700;
}

[role="tabpanel"] h3.passed strong {
	color: #358700;
}

[role="tabpanel"] h3.cantTell button::after {
	color: #2a609e;
}

[role="tabpanel"] h3.cantTell .status {
	background-color: rgba(42, 96, 158, 0.1);
	color: #2a609e;
}

[role="tabpanel"] h3.cantTell button[aria-expanded="true"]::before {
	background-color: #2a609e;
}

[role="tabpanel"] h3.cantTell strong {
	color: #2a609e;
}

[role="tabpanel"] h3.cantTell + div mark {
	background: -moz-linear-gradient(top, #588ECE, #2A609E);
	color: #fff;
}	
		
.tags {
	margin: 0 !important; padding: 0.25em !important;
}

.tags p, .tags button {
	font-size: 0.6em;
}

.tags ul {
	list-style-type: none; padding: 0 0 0 0.25em;
}

.tags p, .tags ul, .tags li {
	display: inline-block; margin: 0;
}

[role="tabpanel"] h3 button[aria-expanded="true"]::after {
	color: #fff;
	content: "\f107";
	left: 0;
	margin-top: -0.55em;
}

[role="tabpanel"] p {
	font-size: 0.8em;
}

.tableactions {
	padding: 0.25em;
}

.tableactions > * {
	display: inline-block;
	margin: 0;
	padding-left: 0.25em;
}

.tableactions p + p {
	margin-left: 0.75em;
	padding-left: 0.25em;
	border-left: dotted 1px #111;
}
/* ... */

